--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "dependencies": {
-    "axios": "^0.21.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "core-js": "^3.6.5",
-    "sass": "^1.28.0"
-  }
+	"dependencies": {
+		"axios": "^0.21.0",
+		"parcel-bundler": "^1.10.1",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.1",
+		"react-bootstrap": "^1.4.0",
+		"react-dom": "^17.0.1",
+		"react-router-dom": "^5.2.0"
+	},
+	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-react": "^6.24.1",
+		"core-js": "^3.6.5",
+		"sass": "^1.28.0"
+	}
 }
